# vfs

./: CMakeLists.txt
apps/: apps.c
disk/: disk.c  disk.h
file/: file.c  file.h
